k8s/services/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: hustsim
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "hustsimulator-ip"
    networking.gke.io/managed-certificates: "hustsimulator-cert-v2"
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
spec:
  rules:
    - host: admin.hustsimulator.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-ui
                port:
                  number: 80
  defaultBackend:
    service:
      name: api-gateway
      port:
        number: 80
